# zoverions-crg

./: .gitignore  ABSTRACT.md  CONSTITUTION.md  LICENSE  MARKETING.md  README.md  generate_notebook.py  pyproject.toml  setup.py  test_constitution.py  test_v2.py
examples/: desi_spin_test.ipynb  quick_start.py
zoverions_crg/: __init__.py  constitution.py  core.py  core_logic.py  utils.py
zoverions_crg/examples/: desi_spin_test.ipynb
