[project]
name = "zoverions-crg"
version = "0.1.0"
description = "Causal Renormalization Group — operationalizing the Recursive Universe"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["networkx>=3.0", "numpy>=1.24", "scipy>=1.10"]

[project.urls]
Homepage = "https://github.com/zoverions/zoverions-crg"
